AAA-87-Component-Two-Column-Comparison-Back-End - Finished styling and fixed initial layout problems where elements were not built based off requirements. TODO - new requirement was added to allow for a 3rd column to be introduced.

--- a/html-prototype/clientlibs/ace-www/base/less/two-column-compare.less
+++ b/html-prototype/clientlibs/ace-www/base/less/two-column-compare.less
@@ -3,7 +3,15 @@
 .tcc-container-padding{
   padding: 0 30px;
 }
-.tcc-horizontal-space{margin-bottom:70px}
+
+.tcc-top-rte{
+  padding-bottom: 70px;
+}
+
+.tcc-horizontal-space{
+  margin-bottom:70px
+}
+
 .column-image {
   display: block;
   margin-left: auto;
@@ -17,4 +25,11 @@
   width: 1px;
   height: 100%;
   color: @color-gray-light;
+}
+
+.tcc-divider{
+  width: 1px;
+  height: 40px;
+  border: 1px dotted #A8AAAC;
+  margin-left: 50%;
 }
